fixed sharelines, spacing on data cards

--- a/app/styles/components/_data.scss
+++ b/app/styles/components/_data.scss
@@ -7,16 +7,14 @@
     .top-details{
       border-bottom: 1px dashed $line-gray;
       padding:0.5em 0;
+      @include clearfix;
       p{
         color:$text-gray;
         margin:0em;
         font-size:0.9em;
         &.date{
-          margin-bottom:0.5em;
           @include media($default-560){
-            float:left;
-            margin-right:1em;
-            margin-bottom:0;
+            @include span-columns(3);
           }
         }
         &.company{
@@ -28,14 +26,16 @@
           @include media($default-560){
             text-align:center;
             font-size:1em;
+            @include span-columns(6);
           }
         }
         &.location {
           text-transform:uppercase;
           @include media($default-560){
             text-transform:capitalize;
-            float:right;
-            margin-left:1em;
+            text-align:right;
+            @include span-columns(3);
+            @include omega;
           }
         }
         @include media($default-560){
